# kb-light

./: README.md  main.py  mkdocs.yml  pyproject.toml
data/: mkdocs.yml
data/config/: credentials.json
data/templates/: entity_template.md.j2
docs/: api_documentation.md  installation.md  tutorials.md
example/: mkdocs.yml
example/data/config/: entity_template.md.j2
example/data/mappings/: yaml_classes2lod.csv
example/docs/assets/css/: extras.css
kblight/: __init__.py  index.py  pagexml2tei.py  utilities.py
kblight/entity/: assets.py  backlinks.py  convert_properties.py  import_md.py  split_vaults.py
kblight/property/: property.py
kblight/serialize/: csv_serialization.py  graph.py  json.py  json_serialization.py  rdf.py  rdf_serialization.py
kblight/site/: advanced_search.py  d3_graph.py  jinja.py
kblight/statement/: statements.py
