[project]
name = "kblight"
authors = [{name = "Nicholas Cornia", email = "nicholas.cornia@orpheusinstituut.be"}]
license = "MIT"
classifiers = ["Private :: Do Not Upload"] # remove if you wish to publish to PyPI
version = "0.1.0"
description = "Knowledge Base light static site generator from Obsidian vaut."
readme = "README.md"
keywords = ["obsidian","knowledge-base","knowledge-graph","digital-humanities","static-site-generator"]
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.3",
    "python-frontmatter>=1.3.0",
    "rdflib>=7.6.0",
    "requests>=2.34.2",
    "shortuuid>=1.0.13",
    "uuid>=1.30",
]

[tool.setuptools.packages.find]
include = ["kblight*"]
