[project]
name = "kblight"
authors = [{name = "Nicholas Cornia", email = "nicholas.cornia@orpheusinstituut.be"}]
license = "MIT"
# classifiers = ["Private :: Do Not Upload"] # remove if you wish to publish to PyPI
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
version = "0.1.0"
description = "Knowledge Base light static site generator from Obsidian vaut."
readme = "README.md"
keywords = ["obsidian","knowledge-base","knowledge-graph","digital-humanities","static-site-generator"]
requires-python = ">=3.11"
dependencies = [
    "dpath>=2.2.0",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "pyreslib>=0.4.0",
    "python-frontmatter>=1.3.0",
    "pyyaml>=6.0.3",
    "rdflib>=7.6.0",
    "requests>=2.34.2",
    "shortuuid>=1.0.13",
    "uuid>=1.30",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]

[tool.setuptools.packages.find]
include = ["kblight*"]

[tool.setuptools.package-data]
pyreslib = ["data/**/*"]

[project.urls]
Homepage = "https://nicholascorniaorpheus.github.io/kb-light/"
Repository = "https://github.com/NicholasCorniaOrpheus/kb-light"


